kube/socmed.yml
apiVersion: v1
kind: Service
metadata:
  name: socmed
spec:
  selector:
    app: socmed
  ports:
    - protocol: TCP
      port: 8000
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: socmed 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socmed
  template:
    metadata:
      labels:
        app: socmed 
    spec:
      containers:
      - name: socmed 
        imagePullPolicy: Always
        image: cilsyari/cilsy:socmed-3
        ports:
        - containerPort: 8000
---
