kube/jenkins.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    nginx.org/client-max-body-size: "10m"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: jenkins.ari-k8s.retiarno.my.id
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 8080
      name: "http"
    - protocol: TCP
      port: 50000
      name: "jnlp"
    
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: jenkins 
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins 
    spec:
      securityContext:
        fsGroup: 1000 
        runAsUser: 0
      containers:
      - name: jenkins
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        imagePullPolicy: Always
        image: ariretiarno/jenkins:latest
        ports:
        - containerPort: 8080
        - name: jnlp-port
          containerPort: 50000
        volumeMounts:
        - mountPath: "/var/jenkins_home"
          name: jenkins-volume
        - name: jenkins-casc
          mountPath: "/var/jenkins_home/casc.yaml"
          subPath: "casc.yaml"
      volumes:
      - name: jenkins-volume
        persistentVolumeClaim:
         claimName: jenkins-dynamic-volume
      - name: jenkins-casc
        configMap:
          name: jenkins-casc-configmap
